# autoregressive_playground

./: .env.example  .gitignore  character_prediction__karp_ex.ipynb  character_prediction_karp_full.ipynb  character_prediction_multi_head.ipynb  character_prediction_single_head.ipynb  pyproject.toml  subword_inference.ipynb  subword_prediction.ipynb  subword_tokenizer_bpe.ipynb  subword_tokenizer_sp.ipynb  subword_tokenizer_wp.ipynb
character_prediction/: character_prediction__karp_ex.ipynb  character_prediction_karp_full.ipynb  character_prediction_multi_head.ipynb  character_prediction_single_head.ipynb  testt.py
instruction_following/: chat_template.py  checkpoint_cleaner.py  concatenate_tokenized_datasets_instruction.ipynb  concatenate_tokenized_datasets_pre.ipynb  enrich_instruction_datasets.ipynb  env_handler.py  freezing_weights.ipynb  gelu.ipynb  inspect_checkpoints.ipynb  inspect_datasets.ipynb  inspect_inference.ipynb  inspect_initialization.ipynb  inspect_instruction_inference.ipynb  inspect_model.ipynb  inspect_optimizer.ipynb  inspect_pre_checkpoints.ipynb  inspect_pre_inference.ipynb  inspect_pre_training.ipynb  inspect_sft_datasets.ipynb  inspect_sft_final_datasets.ipynb  inspect_tokenizer.ipynb  instruction_dataset.ipynb  instruction_training.ipynb  instruction_training.py  layer_norm.ipynb  learning_metrics.py  learning_rate_scheduler.ipynb  mega_upload.py  model.py  optimizer.py  perplexity.ipynb  pre_trainer.ipynb  pre_training.ipynb  probabilities.ipynb  settings.py  sft_datasets.py  simulate_pre_training.ipynb  special_tokens.py  start.sh  system_metrics.py  (+6 more)
instruction_following_v2/: assistant_mask.py  chat_template.py  checkpoints.py  display_logs.py  estimate_loss.py  generation.py  inspect_checkpointer.ipynb  inspect_tokenizer.ipynb  inspect_trained_inference.ipynb  inspect_training_data_reader.ipynb  inspect_untrained_inference.ipynb  learning_metrics.py  learning_schedule.py  load_pre_trained.py  loss.py  optimizer.py  prod_train.py  rclone.txt  roadmap.md  sft_training.py  system_metrics.py  test_train.py  tokenize_messages.ipynb  training_data_reader.py  training_loop.py  zip.py
subword_prediction/: bpe_tokenizer.json  subword_prediction.ipynb  subword_tokenizer_bpe.ipynb
(+21 files in other folders)
