[project]
name = "pythonproject1"
version = "0.0.1"
description = "Add your description here"
requires-python = "==3.12.12" # matches colab
dependencies = [
    "ipykernel>=7.1.0",
    "jupyterlab>=4.1.6",
    "nn>=0.1.1",
    "numpy>=2.3.5",
    "sentencepiece>=0.2.1",
    "tokenizers>=0.22.2",
    "torch==2.7.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"

# import: pip install -r requirements.txt
# export: uv export --format=requirements-txt > requirements.txt
# colab optimized import: pip install -r requirements_colab.txt
