[project]
name = "pythonproject1"
version = "0.0.1"
description = "Add your description here"
requires-python = "==3.10.*"
dependencies = [
    "datasets>=2.19.1",
    "ipykernel>=7.2.0",
    "jupyterlab-widgets>=3.0.16",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"

# import: pip install -r requirements.txt
# export: uv export --format=requirements-txt > requirements.txt
# colab optimized import: pip install -r requirements_colab.txt
# ipykernel, jupyterlab, jupyterlab-widgets, nn, numpy, sentencepiece, tokenizers, torch, datasets
# $ uv venv --python 3.13