[project]
name = "pythonproject1"
version = "0.0.1"
description = "Add your description here"
requires-python = "==3.10.*"
dependencies = [
    "datasets>=2.19.1",
    "gdown>=5.2.1",
    "huggingface-hub>=1.4.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jinja2>=3.1.6",
    "jupyterlab-widgets>=3.0.16",
    "matplotlib>=3.10.8",
    "millify>=0.1.1",
    "python-dotenv>=1.2.1",
    "sentencepiece>=0.2.1",
    "setuptools>=70.2.0",
    "tabulate>=0.9.0",
    "tokenizers>=0.22.2",
    "torch>=2.10.0",
    "torchinfo>=1.8.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
# import: pip install -r requirements.txt
# export: uv export --format=requirements-txt > requirements.txt
# colab optimized import: pip install -r requirements_colab.txt
# ipykernel, jupyterlab, jupyterlab-widgets, nn, numpy, sentencepiece, tokenizers, torch, datasets
# uv venv --python 3.13
# uv add torch --index "https://download.pytorch.org/whl/cpu"